8368182: Pluggable module loaders, consumed with import
Where an import's specifier comes from is now the engine's
module-loading chain (org.monflabs.nashorn.api.modules, registered with
the builder's moduleLoader): every loader is asked in order, the first
that answers wins, and null means not mine. ModuleLoader is one method,
load(specifier, referrer) - a loader resolves ./x against a referrer
whose origin it recognises as its own and passes on a foreign one - and
Module is what it answers with: source(name, text[, origin]) for
script, values(name, exports) for a module whose exports are Java
values, the name being the once-per-realm registry key. Three loaders
ship: PathModuleLoader (files under a root, ./ against the importer,
absolute as itself, literal names), ResourceModuleLoader (class-path
resources under an optional root, named classpath:/..., never above the
root) and JavaModuleLoader (registered names to exports, default
included; fixed values, a namespace per realm). No loader registered
keeps today's filesystem resolution; a specifier nobody answers is a
link-time TypeError naming it and its importer, and each module's
resolutions are asked of the chain once, not per use.

Modules are consumed with the language's own syntax: import and export
are reserved words, so a module is never a valid script, and a source
handed to eval - or a file handed to jjs - whose script COMPILE fails
is re-parsed as a module and run as one, the completion value being its
namespace. Only the compile step decides: a script that compiled and
then threw at runtime is never run again as a module - the first
detection caught any ScriptException and re-ran throwing scripts, which
three script tests and a debugger test exposed. An eval'd entry module
is detached from the registry, every eval being its own program; the
first version registered them all as <eval>, so a second eval in the
same realm silently got the first one's module back.

ModuleRecord grew a values-backed mode (no